--- a/style.css
+++ b/style.css
@@ -88,3 +88,21 @@ img{
     text-align: center;
     padding-top: 25px;
 }
+
+.menu a{
+    text-decoration: none;
+    color: #22d4fd;
+    font-size: 24px;
+    font-family: Montserrat;
+}
+
+.menu li{
+    list-style: none;
+}
+
+.menu{
+    display:flex;
+    justify-content:flex-start;
+    margin: 2% 15%;
+    gap: 80px;
+}
