Melhora no arquivo .css e adição dos ícones

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ img{
     width: 378px;
     height: 68px;
     text-align: center;
-    border: solid #22d4fd;
+    border: 2px solid #22d4fd;
     border-radius: 8px;
     font-size: 24px;
     font-weight: 600;
