--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     color: #F6F6F6;
 }
 
-img{
+.imagem-principal{
     width: 488px;
     height: 550px;
 }
@@ -70,12 +70,6 @@ img{
     text-decoration: none;
     color: #ffffff;
     font-family: 'Montserrat', sans-serif;
-}
-
-.icone1, .icone2{
-    height: 32px;
-    width: 32px;
-    display: inline;
 }
 
 .rodape{
