--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ body{
 }
 
 .imagem-principal{
-    width: 488px;
-    height: 550px;
+    width: 288px;
+    height: 350px;
 }
 
 .titulo-destaque{
@@ -18,7 +18,7 @@ body{
 }
 
 .apresentacao{
-    margin: 10% 15%;
+    margin: 4% 20%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -26,27 +26,27 @@ body{
 
 /* A classe que abraça todo o conteúdo, você configura a largura de acordo com o projeto, e o espaçamento entre os elementos fica aqui!!!! */
 .apresentacao__conteudo{
-    width: 615px;
+    width: 500px;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 30px;
     box-sizing: border-box;
 }
 
 .apresentacao__conteudo__titulo{
     font-family: Krona One;
-    font-size: 36px;
+    font-size: 26px;
 }
 
 .apresentacao__conteudo__texto{
     font-family: Montserrat;
-    font-size: 24px;
+    font-size: 17px;
     font-weight: light;
 }
 
 .apresentacao__links__titulo{
     font-family: Krona One;
-    font-size: 24px;
+    font-size: 18px;
     text-align: center;
 }
 
@@ -59,14 +59,14 @@ body{
 }
 
 .apresentacao__links__link{
-    width: 378px;
-    height: 68px;
+    width: 230px;
+    height: 50px;
     text-align: center;
     border: 2px solid #22d4fd;
     border-radius: 8px;
-    font-size: 24px;
+    font-size: 19px;
     font-weight: 600;
-    padding: 16px;
+    padding: 5px;
     text-decoration: none;
     color: #ffffff;
     font-family: 'Montserrat', sans-serif;
@@ -74,14 +74,14 @@ body{
 
 .rodape{
     font-family: Montserrat;
-    font-size: 24px;
+    font-size: 18px;
     background-color:#22d4fd;
     width: 100%;
-    height: 80px;
+    height: 40px;
     color: black;
-    position: absolute;
-    text-align: center;
-    padding-top: 25px;
+    position: static;
+    align-items: center;
+    display: inline-block;
 }
 
 .menu a{
@@ -98,6 +98,6 @@ body{
 .menu{
     display:flex;
     justify-content:flex-start;
-    margin: 2% 15%;
+    margin: 2% 20%;
     gap: 80px;
 }
