--- a/style.css
+++ b/style.css
@@ -61,15 +61,24 @@ body{
 .apresentacao__links__link{
     width: 230px;
     height: 50px;
-    text-align: center;
     border: 2px solid #22d4fd;
+    text-align: center;
     border-radius: 8px;
-    font-size: 19px;
-    font-weight: 600;
-    padding: 5px;
     text-decoration: none;
-    color: #ffffff;
+    color: #f6f6f6;
     font-family: 'Montserrat', sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 13px 0;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    align-items: center;
+}
+
+.apresentacao__links__link img{
+    height: 32px;
+    width: 32px;
 }
 
 .rodape{
@@ -80,8 +89,6 @@ body{
     height: 40px;
     color: black;
     position: static;
-    align-items: center;
-    display: inline-block;
 }
 
 .menu a{
@@ -100,4 +107,8 @@ body{
     justify-content:flex-start;
     margin: 2% 20%;
     gap: 80px;
+}
+
+a:hover{
+    background-color: #2f2f2f;
 }
