--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 body{
-    height: 100vh;
     box-sizing: border-box;
     background-color: #000000;
     color: #F6F6F6;
+    overflow: none;
 }
 
 .imagem-principal{
@@ -18,7 +18,7 @@ body{
 }
 
 .apresentacao{
-    margin: 4% 20%;
+    padding: 4% 20%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -81,7 +81,7 @@ body{
     width: 32px;
 }
 
-.rodape{
+/* .rodape{
     font-family: Montserrat;
     font-size: 18px;
     background-color:#22d4fd;
@@ -89,6 +89,16 @@ body{
     height: 40px;
     color: black;
     position: static;
+} */
+
+.rodape{
+    color: black;
+    background-color: #22d4fd;
+    padding: 24px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    font-weight: 400;
 }
 
 .menu a{
